packages/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 851725465050.dkr.ecr.us-east-1.amazonaws.com/hello-repository:latest
        ports:
        - containerPort: 80
